--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "router-dom": "^3.0.1",
     "web-vitals": "^4.2.4"
   },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.14.5"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
