--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
     "router-dom": "^3.0.1",
